# NPHardExploration

./: AlgoBuilder.h  AlgoFactory.h  Annealing.h  Decorator.cpp  Decorator.h  Dynamic.cpp  Genetic.cpp  Node.h  Tabu.cpp  main.cpp  main.out
Documentation/: Analaysis.docx
LAB01/: AlgoTimes.xlsx  CMakeLists.txt  Lab01_Report.docx  algofactory.cpp  algofactory.h  algorithm.h  bubbleSort.h  generateData.cpp  generateData.h  insertionSort.h  main.cpp  mergeSort.h  search.cpp  search.h  sort.cpp  sort.h
LAB01/.idea 1.07.01 AM/: workspace.xml
LAB01/InputFiles/: Random10.txt  Random1000.txt  Random10000.txt  Random100000.txt  ThirtyPercent10.txt  ThirtyPercent1000.txt  ThirtyPercent10000.txt  ThirtyPercent100000.txt  TwentyPercent10.txt  TwentyPercent1000.txt  TwentyPercent10000.txt  (+1 more)
LAB02/: A.cpp  A.h  AStar.cpp  AStar.h  BFS.cpp  BFS.h  CMakeLists.txt  DFS.cpp  DFS.h  Dijkstra.cpp  Dijkstra.h  Node.cpp  Node.h  StatsLab2.xlsx  algorithm.h  generateSmallExcel.csv  largeSaveData.txt  main.cpp  saveData.txt  search.cpp  search.h
LAB03/: AlgoBuilder.cpp  AlgoFactory.cpp  AlgoFactory.h  CMakeLists.txt  Decorator.cpp  Decorator.h  Dynamic.cpp  main.cpp
LAB03/Documentation/: Brute_Force.csv  Dynamic.csv  LAB3_Report.docx  Lab3Data.xlsx
LAB04/: AlgoFactory.cpp  AlgoFactory.h  BruteForce.cpp  BruteForce.h  Decorator.cpp  Dynamic.h  Genetic.cpp  Genetic.h  Reader.cpp  Salesman.cpp  Tabu.cpp  Tabu.h  main.cpp
LAB05/: AlgoFactory.cpp  Annealing.cpp  BaseDecorator.h  BruteForce.cpp  Reader.h  Salesman.h  Swarm.cpp  Swarm.h
Lab04/: CMakeLists.txt  Genetic.cpp  nodes.txt
(+24 files in other folders)
